<resources>
    <string name="app_name">EcommerceAppExample</string>
    <string name="right_address">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the \nbest quality among the\nproducts on the internet</string>
    <string name="kleine">Kleine.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="tv_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="button_login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="register_button">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_view_reset_password">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search_now">Search Now</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_1600">$1600</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_2000">$2000</string>
    <string name="see_product">See product</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
</resources>