<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/kleine"
            android:textColor="@color/g_black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/crimson_pro"
            android:gravity="center"
            android:text="@string/right_address"
            android:textAlignment="center"
            android:textColor="@color/g_black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/crimson_pro"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
            app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@+id/tvRightAddressForShopping" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/g_black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/buttonRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@+id/buttonRegisterAccountOptions"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccountOptions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>