<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:background="@color/g_card_background"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">


        <ImageView
            android:id="@+id/imageBestDeals"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBestDealsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/scotch_premium"
        android:textColor="@color/g_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageBestDeals"
        app:layout_constraintTop_toTopOf="@+id/imageBestDeals" />

    <TextView
        android:id="@+id/tvOldPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/_1600"
        android:textColor="@color/g_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBestDeals"
        app:layout_constraintStart_toStartOf="@+id/tvBestDealsName"
        app:layout_constraintTop_toBottomOf="@+id/tvBestDealsName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/_2000"
        android:textColor="@color/g_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBestDealsName"
        app:layout_constraintStart_toEndOf="@+id/tvOldPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvBestDealsName" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonAddToCart"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/button_small_background"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/see_product"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBestDealsName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506"
        app:spinning_bar_color="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>