<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/g_card_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_ad"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ad_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/scotch_premium"
            android:textColor="@color/g_black"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_ad"
            app:layout_constraintTop_toTopOf="@+id/image_ad" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/_1600"
            android:textColor="@color/g_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_ad_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_ad_name" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonAddToCart"
            android:layout_width="82dp"
            android:layout_height="27dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_small_background"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price"
            app:spinning_bar_color="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/favorite_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>